pkg/lang/syntax/testdata/ub/validate/invalid/factory/duplicate-node-meta.ub
factory: {
  resources: {
    hello: std.fs-file {
      @timeout: '30s'
      @timeout: '1m'
    }
  }
}
